k8s/groups/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: groups-service
spec:
  type: ClusterIP                 # тип доступу до сервісу, ClusterIp - значення за замовчуванням і може бути пропущене
  ports:
    - port: 80                    # порт по якому можна звератись до сервісу 
      targetPort: 80            # порт контейнера
  selector:
    app: groups              # селектор, всі Pod з даним селектором, будуть підключені до даного сервісу
