k8s/groups/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groups-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/groups
            pathType: "Prefix"
            backend:
              service:
                name: groups-service
                port:
                  number: 80
